# temocr

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
ui/temocr/: devenv.nix
ui/temocr/src/: data.js  index.html  main.js  styles.css
ui/temocr/src-tauri/: Cargo.toml  tauri.conf.json
ui/temocr/src-tauri/icons/: icon.icns
ui/temocr/src-tauri/src/: lib.rs  main.rs
