[package]
name = "temocr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
# opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "temocr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

color-eyre = "0.6.3"
image = "0.25.5"
lexopt = "0.3.0"
ocrs = "0.9.0"
rten = "0.13"
rten-tensor = "0.14.1"
winit = "0.30.5"
xcap = "0.0.14"
